# arcaflow-plugin-pcp

./: Dockerfile  README.md  docker-compose.yaml  example.yaml  pcp2json.conf  pcp_plugin.py  pcp_schema.py  pmlogger.conf  pyproject.toml  test_pcp_plugin.py
.github/workflows/: build.yaml  carpenter.yaml  workflow.yaml
arcaflow_plugin_pcp/: pcp_plugin.py  pcp_schema.py
configs/: pcp_example.yaml
test-workflow/: input.yaml  workflow.yaml
test-workflow-k8s/: config.yaml  input.yaml  workflow.yaml
tests/: pmlogger-out.0  pmlogger-out.index  pmlogger.conf  pmrep.conf  test_arcaflow_plugin_pcp.py  test_pcp_plugin.py
