[tool.poetry]
name = "arcaflow-plugin-pcp"
version = "0.1.0"
description = "arcaflow plugin for performance copilot"
authors = ["Arcalot"]
license = "Apache-2.0"
readme = "README.md"

packages = [
   { include="pcp_plugin.py", from="./arcaflow_plugin_pcp"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
