[tool.poetry]
name = "arcaflow-plugin-pcp"
version = "0.1.0"
description = "arcaflow plugin for performance copilot"
authors = ["Arcalot"]
license = "Apache-2.0"
readme = "README.md"

packages = [
   { include="pcp_plugin.py", from="./arcaflow_plugin_pcp"  },
]

[tool.poetry.dependencies]
python = "^3.12"
arcaflow-plugin-sdk = "^0.14.4"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
